fix itunes button layout issue

--- a/creations/static/stylesheets/radio.sass
+++ b/creations/static/stylesheets/radio.sass
@@ -11,7 +11,7 @@ $mobile-breakpoint: 500px
   display: inline-block
   overflow: hidden
   background: url(https://linkmaker.itunes.apple.com/images/badges/en-us/badge_itunes-lrg.svg) no-repeat
-  width: 110px
+  width: 140px
   height: 40px
 
 
